--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </label>
                     </div>
                     <div class="form-text">
-                        金額が不明な場合は概算します。介護保険加入の有無で概算率が変わります（有: 約15%, 無: 約14.3%）。
+                        金額が不明な場合は概算で計算します。（介護保険加入有: 約15%, 無: 14.3%）。
                     </div>
                 </div>
                 <div class="col-md-6">
