--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </label>
                     </div>
                     <div class="form-text">
-                        金額が不明な場合は概算で計算します。（介護保険加入有: 約15%, 無: 14.3%）。
+                        金額が不明な場合は概算で計算します。（介護保険加入有: 約15%, 無: 14.3%）。但し、665000円以上の場合は要入力。
                     </div>
                 </div>
                 <div class="col-md-6">
